[workspace]
members = [
    "exc-core",
    "exc",
    "exc-okx",
    "exc-binance",
    "examples",
]

[workspace.package]
version = "0.6.0"
edition = "2021"
authors = ["Nouzan <clobraindie@outlook.com>"]
license = "MIT"
repository = "https://github.com/Nouzan/exc"
keywords = ["exchange", "tower"]
readme = "README.md"
description = "The abstraction layer of exchanges."
rust-version = "1.65"

[workspace.dependencies]
exc-core = { version = "0.6.0", path = "./exc-core" }
exc-binance = { version = "0.6.0", path = "./exc-binance" }
exc-okx = { version = "0.6.0", path = "./exc-okx" }
exc = { path = "./exc" }

indicator = { git = "https://github.com/Nouzan/indicator.git", branch = "main" }
positions = "0.1"
tracing = "0.1.36"
anyhow = "1"
thiserror = "1.0.30"
either = "1.8.0"

# serde
serde = { version = "1.0.136", features = ["derive"] }
serde_with = "2.0.1"
serde_json = "1.0.85"

# data
time = "0.3.9"
uuid = "1.1.2"
rust_decimal = "1.26.1"
rust_decimal_macros = "1.26.1"
num-traits = "0.2.15"

# async
tower = "0.4.12"
futures = "0.3.24"
futures-util = "0.3.24"
pin-project-lite = "0.2.9"
async-stream = "0.3"
tokio = "1.21.1"
tokio-stream = "0.1.10"
tokio-tungstenite = "0.17.2"
tokio-tower = "0.6.0"
hyper = "0.14"
hyper-tls = "0.5"
http = "0.2.8"

# utils
humantime = "2.1.0"

# signature
hmac = "0.12.0"
sha2 = "0.10.0"
