[workspace]
members = ["exc-core", "exc", "exc-okx", "exc-binance", "examples"]

[workspace.package]
version = "0.6.0-nightly"
edition = "2021"
authors = ["Nouzan <clobraindie@outlook.com>"]
license = "MIT"
repository = "https://github.com/Nouzan/exc"
keywords = ["exchange", "tower"]
readme = "README.md"
description = "The abstraction layer of exchanges."
rust-version = "1.65"

[workspace.dependencies]
exc-core = { version = "0.6.0-nightly", path = "./exc-core" }
exc-binance = { version = "0.6.0-nightly", path = "./exc-binance" }
exc-okx = { version = "0.6.0-nightly", path = "./exc-okx" }
exc = { path = "./exc" }

indicator = "0.4.0-beta.0"
positions = "0.2.1"
tracing = "0.1.37"
anyhow = "1.0.68"
thiserror = "1.0.38"
either = "1.8.0"

# serde
serde = { version = "1.0.151", features = ["derive"] }
serde_with = "2.1.0"
serde_json = "1.0.91"

# data
time = "0.3.17"
uuid = "1.2.2"
rust_decimal = "1.27.0"
rust_decimal_macros = "1.27.0"
num-traits = "0.2.15"

# async
tower = "0.4.13"
futures = "0.3.25"
futures-util = "0.3.25"
pin-project-lite = "0.2.9"
async-stream = "0.3.3"
tokio = "1.23.0"
tokio-stream = "0.1.11"
tokio-tungstenite = "0.18.0"
tokio-tower = "0.6.0"
hyper = "0.14.23"
hyper-tls = "0.5.0"
http = "0.2.8"

# utils
humantime = "2.1.0"

# signature
hmac = "0.12.1"
sha2 = "0.10.6"
