[package]
name = "exc-examples"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "exc-trading"
path = "exc_trading.rs"

[[bin]]
name = "okx-instrument"
path = "okx_instrument.rs"

[[bin]]
name = "okx-ws-basic"
path = "okx_ws_basic.rs"

[[bin]]
name = "okx-http-basic"
path = "okx_http_basic.rs"

[[bin]]
name = "okx-ws-login"
path = "okx_ws_login.rs"

[[bin]]
name = "okx-two-streams"
path = "okx_two_streams.rs"

[[bin]]
name = "okx-candle"
path = "okx_candle.rs"

[[bin]]
name = "okx-ws-trading"
path = "okx_ws_trading.rs"

[[bin]]
name = "binance-instrument"
path = "binance_instrument.rs"

[[bin]]
name = "binance-candle"
path = "binance_candle.rs"

[[bin]]
name = "binance-rate-limit"
path = "binance_rate_limit.rs"

[[bin]]
name = "binance-trade-bid-ask"
path = "binance_trade_bid_ask.rs"

[[bin]]
name = "binance-ticker"
path = "binance_ticker.rs"

[[bin]]
name = "binance-orders"
path = "binance_orders.rs"

[[bin]]
name = "binance-trading"
path = "binance_trading.rs"

[[bin]]
name = "binance-streams"
path = "binance_streams.rs"

[dependencies]
anyhow = "1"
exc = { path = "../exc", features = ["http"] }
exc-okx = { path = "../exc-okx" }
exc-binance = { path = "../exc-binance" }
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
futures = "0.3.21"
tower = { version = "0.4.12", features = ["util", "limit", "buffer", "retry"] }
time = { version = "0.3", features = ["macros"] }
console-subscriber = "0.1.5"
rust_decimal = "1.24.0"
rust_decimal_macros = "1.24.0"
clap = { version = "3", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5.9"
humantime = "2"
