[package]
name = "examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
exc = { workspace = true, features = ["http"] }
exc-okx = { workspace = true }
exc-binance = { workspace = true }
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter", "json"] }
futures = "0.3.21"
tower = { version = "0.4.12", features = ["util", "limit", "buffer", "retry"] }
time = { version = "0.3", features = ["macros"] }
console-subscriber = "0.1.5"
rust_decimal = "1.24.0"
rust_decimal_macros = "1.24.0"
clap = { version = "3", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5.9"
humantime = "2"
