[package]
name = "examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
exc = { workspace = true, features = ["okx", "binance"] }
exc-okx = { workspace = true }
exc-binance = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.3", features = ["env-filter", "json"] }
futures = { workspace = true }
tower = { workspace = true, features = ["util", "limit", "buffer", "retry"] }
time = { workspace = true, features = ["macros"] }
console-subscriber = "0.1.5"
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
clap = { version = "3", features = ["derive", "env"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
humantime = { workspace = true }
toml = "0.5.9"
