[package]
name = "exc-binance"
version = "0.1.0"
edition = "2021"
authors = ["Nouzan <clobraindie@outlook.com>"]
license = "MIT"
description = "Binance exchange services"
repository = "https://github.com/Nouzan/exc"
keywords = ["exchange", "tower", "binance"]

[dependencies]
anyhow = "1"
thiserror = "1.0.30"
tracing = "0.1.34"
futures = "0.3.21"
http = "0.2.6"
serde_json = "1.0.79"
serde_with = "1.11"
async-stream = "0.3.3"

[dependencies.exc]
version = "0.3.0"
path = "../exc"
features = ["websocket"]
