[package]
name = "exc-binance"
version = "0.3.1"
edition = "2021"
authors = ["Nouzan <clobraindie@outlook.com>"]
license = "MIT"
description = "Binance exchange services"
repository = "https://github.com/Nouzan/exc"
keywords = ["exchange", "tower", "binance"]

[dependencies]
anyhow = "1"
thiserror = "1.0.30"
either = "1"
tracing = "0.1.34"
futures = "0.3.21"
http = "0.2.6"
serde_json = "1.0.79"
serde_with = "1.11"
async-stream = "0.3.3"
tokio-tower = "0.6.0"
pin-project-lite = "0.2.8"
rust_decimal = "1"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.exc]
version = "0.3.0"
path = "../exc"
features = ["websocket", "http"]

[dependencies.hyper]
version = "0.14"
features = ["client", "http1"]

[dependencies.tower]
version = "0.4.12"
features = ["util", "reconnect", "buffer", "timeout", "retry", "ready-cache"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }

[dependencies.tokio]
version = "1.17.0"
features = ["sync", "rt-multi-thread", "time", "macros"]

[dependencies.tokio-stream]
version = "0.1.8"
features = ["time"]

[dependencies.tokio-tungstenite]
version = "0.17.1"
features = ["native-tls"]
