[package]
name = "exc-binance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "./README.md"
description = "Binance exchange services"
keywords = ["exchange", "tower", "binance"]

[features]
ci = []

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
either = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
serde_with = { workspace = true }
async-stream = { workspace = true }
tokio-tower = { workspace = true }
pin-project-lite = { workspace = true }
rust_decimal = { workspace = true, features = ["serde-with-float"]}

# sign
hmac = { workspace = true }
sha2 = { workspace = true }
hex = "0.4.3"

# serde
serde_json = { workspace = true }
serde_urlencoded = "0.7"

[dependencies.time]
workspace = true
features = ["serde-human-readable", "macros"]

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.exc-core]
workspace = true
features = ["websocket", "http", "retry"]

[dependencies.hyper]
workspace = true
features = ["client", "http1"]

[dependencies.tower]
workspace = true
features = ["util", "reconnect", "buffer", "timeout", "retry", "ready-cache"]

[dependencies.tokio]
workspace = true
features = ["sync", "rt-multi-thread", "time", "macros"]

[dependencies.tokio-stream]
workspace = true
features = ["time", "sync"]

[dependencies.tokio-tungstenite]
workspace = true
features = ["native-tls"]

# dev
[dev-dependencies]
tokio = { workspace = true, features = ["full", "tracing"] }
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
exc = { workspace = true }
rust_decimal_macros = { workspace = true }
clap = { version = "3", features = ["derive", "env"] }
humantime = { version = "2.1.0" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
