[package]
name = "exc-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
rust-version.workspace = true
readme = "./README.md"

[features]
default = ["websocket", "http", "retry"]
websocket = ["tokio-tungstenite", "dep:http", "tokio/net"]
driven = ["tokio/sync", "tokio/rt", "pin-project-lite"]
http = ["hyper/client", "hyper/http1", "hyper-tls", "dep:http"]
retry = ["tower/retry", "tokio/time", "humantime"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true, features = [
    "util",
    "buffer",
    "limit",
    "ready-cache",
] }
futures = { workspace = true }
serde = { workspace = true }
time = { workspace = true, features = ["serde-well-known", "macros"] }
rust_decimal = { workspace = true }
indicator = { workspace = true }
async-stream = { workspace = true }
num-traits = { workspace = true }
positions = { workspace = true }
either = { workspace = true }
tokio-stream = { workspace = true }
humantime = { workspace = true, optional = true }
derive_more = "0.99"

[dependencies.tokio-tungstenite]
workspace = true
features = ["native-tls"]
optional = true

[dependencies.http]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
optional = true

[dependencies.pin-project-lite]
workspace = true
optional = true

[dependencies.hyper]
workspace = true
optional = true

[dependencies.hyper-tls]
workspace = true
optional = true

# dev
[dev-dependencies]
exc = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
