[package]
name = "exc-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
rust-version.workspace = true
readme = "./README.md"

[features]
default = ["websocket", "http", "retry", "rustls-tls"]
native-tls = ["tokio-tungstenite?/native-tls", "hyper-tls"]
rustls-tls = ["tokio-tungstenite?/rustls-tls-webpki-roots", "hyper-rustls"]
websocket = ["tokio-tungstenite", "dep:http", "tokio/net"]
driven = ["tokio/sync", "tokio/rt", "pin-project-lite"]
http = ["hyper/client", "hyper/http1", "dep:http"]
retry = ["tower/retry", "tokio/time", "humantime"]

[dependencies]
exc-symbol = { workspace = true }
anyhow = { workspace = true }
cfg-if = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true, features = [
    "util",
    "buffer",
    "limit",
    "ready-cache",
] }
futures = { workspace = true }
serde = { workspace = true }
time = { workspace = true, features = ["serde-well-known", "macros"] }
rust_decimal = { workspace = true }
indicator = { workspace = true }
async-stream = { workspace = true }
num-traits = { workspace = true }
positions = { workspace = true, features = ["serde"] }
either = { workspace = true }
tokio-stream = { workspace = true }
humantime = { workspace = true, optional = true }
derive_more = "0.99"

[dependencies.tokio-tungstenite]
workspace = true
optional = true

[dependencies.http]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
optional = true

[dependencies.pin-project-lite]
workspace = true
optional = true

[dependencies.hyper]
workspace = true
optional = true

[dependencies.hyper-tls]
version = "0.5.0"
optional = true

[dependencies.hyper-rustls]
version = "0.23.0"
default-features = false
features = ["webpki-tokio", "http1"]
optional = true

# dev
[dev-dependencies]
exc = { workspace = true }
rust_decimal_macros = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
