[package]
name = "exc-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
rust-version.workspace = true
readme = "./README.md"

[features]
default = []
native-tls = ["tokio-tungstenite?/native-tls", "hyper-tls"]
rustls-tls = ["tokio-tungstenite?/rustls-tls-webpki-roots", "hyper-rustls"]
websocket = ["tokio-tungstenite", "dep:http", "tokio/net"]
driven = ["tokio/sync", "tokio/rt"]
http = ["hyper/client", "hyper/http1", "dep:http", "exc-service/http"]
http2 = ["http", "hyper/http2", "hyper-rustls?/http2"]
retry = ["exc-service/retry"]
limit = ["exc-service/limit"]
poll = ["tokio/time"]
fetch-candles = ["tower/buffer"]

[dependencies]
exc-symbol = { workspace = true }
exc-service = { workspace = true }
exc-types = { workspace = true }
exc-make = { workspace = true }

anyhow = { workspace = true }
cfg-if = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true, features = ["util"], default-features = false }
futures = { workspace = true }
serde = { workspace = true }
time = { workspace = true, features = ["serde-well-known", "macros"] }
rust_decimal = { workspace = true }
indicator = { workspace = true }
async-stream = { workspace = true }
num-traits = { workspace = true }
positions = { workspace = true, features = ["serde"] }
either = { workspace = true }
tokio-stream = { workspace = true }
pin-project-lite = { workspace = true }

[dependencies.tokio-tungstenite]
workspace = true
optional = true

[dependencies.http]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
optional = true

[dependencies.hyper]
workspace = true
optional = true

[dependencies.hyper-tls]
version = "0.5.0"
optional = true

[dependencies.hyper-rustls]
version = "0.24.2"
default-features = false
features = ["webpki-tokio", "http1"]
optional = true

# dev
[dev-dependencies]
rust_decimal_macros = { workspace = true }
wasm-bindgen-test = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
