[package]
name = "exc-okx"
version = "0.3.0"
edition = "2021"
authors = ["Nouzan <clobraindie@outlook.com>"]
license = "MIT"
description = "OKX exchange services"
repository = "https://github.com/Nouzan/exc"
keywords = ["exchange", "tower", "okx"]

[dependencies]
anyhow = "1"
either = "1.6.1"
http = "0.2.6"
thiserror = "1.0.30"
tracing = "0.1.34"
futures = "0.3.21"
serde_qs = "0.9"
serde_json = "1.0.79"
serde_with = "1.11"
pin-project-lite = "0.2.8"
tokio-tower = "0.6.0"
async-stream = "0.3.3"
rust_decimal = "1.23"
atomic-waker = "1.0.0"
hmac = "0.12.0"
sha2 = "0.10.0"
base64 = "0.13"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.exc]
version = "0.3.0"
path = "../exc"
features = ["websocket", "driven", "http"]

[dependencies.tower]
version = "0.4.12"
features = ["util", "reconnect", "buffer", "timeout", "retry"]

[dependencies.tokio-tungstenite]
version = "0.17.1"
features = ["native-tls"]

[dependencies.tokio]
version = "1.17.0"
features = ["sync", "rt-multi-thread", "time", "macros"]

[dependencies.tokio-stream]
version = "0.1.8"
features = ["time"]

[dependencies.time]
version = "0.3.9"
features = ["serde-human-readable", "macros"]

[dependencies.hyper]
version = "0.14"
features = ["client", "http1"]

[dependencies.uuid]
version = "1"
features = ["v4"]
