[package]
name = "exc-okx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OKX exchange services"
keywords = ["exchange", "tower", "okx"]

[dependencies]
anyhow = { workspace = true }
either = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
serde_with = { workspace = true }
pin-project-lite = { workspace = true }
tokio-tower = { workspace = true }
async-stream = { workspace = true }
rust_decimal = { workspace = true }
serde_json = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = "0.13.0"
atomic-waker = "1.0.0"
serde_qs = "0.9"

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.exc-core]
workspace = true
features = ["websocket", "driven", "http", "retry"]

[dependencies.tower]
workspace = true
features = ["util", "reconnect", "buffer", "timeout", "retry"]

[dependencies.tokio-tungstenite]
workspace = true
features = ["native-tls"]

[dependencies.tokio]
workspace = true
features = ["sync", "rt-multi-thread", "time", "macros"]

[dependencies.tokio-stream]
workspace = true
features = ["time"]

[dependencies.time]
workspace = true
features = ["serde-human-readable", "macros"]

[dependencies.hyper]
workspace = true
features = ["client", "http1"]

[dependencies.uuid]
workspace = true
features = ["v4"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
