[package]
name = "exc-okx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "./README.md"
description = "OKX exchange services"
keywords = ["exchange", "tower", "okx"]

[features]
default = ["rustls-tls"]
native-tls = ["exc-core/native-tls", "tokio-tungstenite/native-tls"]
rustls-tls = [
    "exc-core/rustls-tls",
    "tokio-tungstenite/rustls-tls-webpki-roots",
]
prefer-client-id = []

[dependencies]
anyhow = { workspace = true }
either = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
serde_with = { workspace = true }
pin-project-lite = { workspace = true }
tokio-tower = { workspace = true }
async-stream = { workspace = true }
rust_decimal = { workspace = true }
serde_json = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
cfg-if = { workspace = true }
base64 = "0.21.5"
atomic-waker = "1.0.0"
serde_qs = "0.12.0"

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.exc-core]
workspace = true
default-features = false
features = ["websocket", "driven", "http", "retry", "fetch-candles", "limit"]

[dependencies.tower]
workspace = true
features = ["util", "reconnect", "buffer", "timeout", "retry", "ready-cache"]

[dependencies.tokio-tungstenite]
workspace = true

[dependencies.tokio]
workspace = true
features = ["sync", "rt-multi-thread", "time", "macros"]

[dependencies.tokio-stream]
workspace = true
features = ["time"]

[dependencies.time]
workspace = true
features = ["serde-human-readable", "macros"]

[dependencies.hyper]
workspace = true
features = ["client", "http1"]

[dependencies.uuid]
workspace = true
features = ["v4"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
clap = { version = "4.0.24", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
