[package]
name = "exc-symbol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
positions = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing", "macros"] }
rust_decimal = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
