[package]
name = "exc-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
exc-service = { workspace = true }
exc-symbol = { workspace = true }

thiserror = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
indicator = { workspace = true }
positions = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
num-traits = { workspace = true }
