[package]
name = "exc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[features]
okx = ["exc-okx"]
binance = ["exc-binance"]
websocket = ["exc-core/websocket"]
driven = ["exc-core/driven"]
http = ["exc-core/http"]
retry = ["exc-core/retry"]

[dependencies]
exc-core = { workspace = true }
tracing = "0.1.34"
tower = { version = "0.4.13" }
futures = { version = "0.3.21"}
async-stream = "0.3"
time = { version = "0.3.9", features = ["serde-well-known", "macros"] }
tokio-stream = "0.1.9"
rust_decimal = "1.25.0"
either = "1.6.1"

exc-okx = { workspace = true, optional = true }
exc-binance = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
