[package]
name = "exc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[features]
okx = ["exc-okx"]
okx-prefer-client-id = ["okx", "exc-okx/prefer-client-id"]
binance = ["exc-binance"]
websocket = ["exc-core/websocket"]
driven = ["exc-core/driven"]
http = ["exc-core/http"]
retry = ["exc-core/retry"]

[dependencies]
exc-core = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
time = { workspace = true, features = ["serde-well-known", "macros"] }
tokio-stream = { workspace = true }
rust_decimal = { workspace = true }
either = { workspace = true }

exc-okx = { workspace = true, optional = true }
exc-binance = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
